--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,10 @@
   font-family: 'Lato-Light';
   src: url("../fonts/lato/Lato-Light.ttf") format("truetype"); }
 @font-face {
-  font-family: 'Raleway';
+  font-family: 'Raleway',serif;
   src: url("../fonts/raleway/Raleway-Regular.ttf") format("truetype"); }
 @font-face {
-  font-family: 'Raleway-Bold';
+  font-family: 'Raleway-Bold',serif;
   src: url("../fonts/raleway/Raleway-Bold.ttf") format("truetype"); }
 * {
   margin: 0;
@@ -18,6 +18,7 @@
 
 body, html {
   background-color: #F2F2F2;
+  overflow-x: hidden;
   font-family: Lato;
   width: 100%;
   margin: 0; }
@@ -32,19 +33,22 @@ header .navbar {
   width: 100%;
   height: 5.18rem;
   white-space: nowrap; }
+  header .navbar button {
+    display: none; }
   header .navbar .links {
     height: 5.18rem;
     display: flex;
     align-items: center; }
     header .navbar .links .logo {
       flex: 1;
-      margin-left: 3.5rem; }
+      margin-left: 3.9rem; }
       header .navbar .links .logo a {
         text-decoration: none;
         color: #999999;
         transition: color 0.3s ease;
-        font-weight: 800;
-        font-size: 22px; }
+        font-weight: 900;
+        font-size: 22px;
+        line-height: 20px; }
         header .navbar .links .logo a:hover {
           color: white; }
         header .navbar .links .logo a i {
@@ -53,7 +57,8 @@ header .navbar {
     header .navbar .links .menu {
       display: block;
       width: 400px;
-      right: 0; }
+      right: 0;
+      margin-right: 2rem; }
       header .navbar .links .menu .home {
         color: white;
         background-color: #FF7878;
@@ -81,13 +86,14 @@ header .header {
   background-size: cover;
   text-align: center; }
   header .header h1 {
+    line-height: 76px;
     font-family: Raleway;
     position: absolute;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
-    margin-top: 119px;
+    margin-top: 121px;
     color: white;
     font-size: 70px;
     font-weight: 300;
@@ -103,7 +109,7 @@ header .header {
     font-size: 40px;
     font-weight: 700;
     letter-spacing: 2px;
-    margin-top: 295px; }
+    margin-top: 293px; }
 
 .presentation {
   margin: 0 6rem 2rem 6rem;
@@ -205,7 +211,11 @@ header .header {
     color: #333333;
     font-weight: bold; }
   .creation p {
-    font-family: Lato-Light; }
+    line-height: 28px;
+    font-family: Lato-Light;
+    font-size: 16px;
+    color: #555555;
+    margin: 0 15rem 0 15rem; }
   .creation .screen {
     width: 1600px;
     height: 333.11px;
@@ -218,7 +228,8 @@ header .header {
     background-size: contain;
     position: absolute;
     left: 50%;
-    transform: translateX(-50%); }
+    transform: translateX(-50%);
+    margin-top: 3rem; }
 
 .clients {
   display: flex;
@@ -229,7 +240,8 @@ header .header {
     font-family: Raleway-Bold;
     color: #333333;
     font-weight: bold;
-    position: absolute; }
+    position: absolute;
+    margin-top: 3rem; }
   .clients .wrap {
     display: flex;
     justify-content: center;
@@ -297,6 +309,7 @@ footer {
       color: #FF7878;
       cursor: pointer; }
 
+/*----------------media screen---------------*/
 @media only screen and (max-width: 1150px) {
   .presentation {
     overflow: auto;
@@ -328,5 +341,246 @@ footer {
     .presentation .support {
       padding: 0;
       margin-bottom: 4rem; } }
+@media only screen and (max-width: 555px) {
+  header .navbar {
+    z-index: 2;
+    position: relative;
+    background-color: #2D2D2D;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 5.18rem;
+    white-space: nowrap; }
+    header .navbar .links {
+      height: 5.18rem;
+      display: flex;
+      align-items: center; }
+      header .navbar .links .logo {
+        flex: 1;
+        margin-left: 3.5rem; }
+        header .navbar .links .logo a {
+          text-decoration: none;
+          color: #999999;
+          transition: color 0.3s ease;
+          font-weight: 800;
+          font-size: 22px; }
+          header .navbar .links .logo a:hover {
+            color: white; }
+          header .navbar .links .logo a i {
+            color: #FF7878;
+            margin: 0 -4px 0 -4px; }
+      header .navbar .links .menu {
+        display: block;
+        width: 400px;
+        right: 0; }
+        header .navbar .links .menu .home {
+          color: white;
+          background-color: #FF7878;
+          transition: background-color 0.3s ease; }
+          header .navbar .links .menu .home:hover {
+            background-color: black; }
+        header .navbar .links .menu a {
+          transition: color 0.3s ease;
+          padding: 5px 15px;
+          padding-top: 14px;
+          padding-bottom: 15px;
+          text-decoration: none;
+          color: #999999;
+          font-size: 14.4px;
+          font-weight: 800; }
+          header .navbar .links .menu a:hover {
+            color: white; }
+  header .header {
+    background: url("../img/header-bg.jpg") no-repeat center top;
+    width: 100vw;
+    margin: 0;
+    margin-top: 3.75rem;
+    min-height: 500px;
+    background-position: center center;
+    background-size: cover;
+    white-space: nowrap;
+    text-align: center; }
+    header .header h1 {
+      font-family: Raleway;
+      font-size: 70px;
+      white-space: nowrap; }
+    header .header h2 {
+      font-family: Raleway-Bold;
+      position: absolute;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
+      color: white;
+      white-space: nowrap;
+      font-size: 40px;
+      font-weight: 700;
+      letter-spacing: 2px;
+      margin-top: 295px; } }
+@media only screen and (max-width: 760px) {
+  header .navbar {
+    z-index: 2;
+    position: relative;
+    overflow: hidden;
+    background-color: #2D2D2D;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 5.18rem;
+    white-space: nowrap; }
+    header .navbar button {
+      display: block;
+      background-color: transparent;
+      right: 0;
+      position: relative;
+      float: right;
+      padding: 9px 10px;
+      margin-top: 25px;
+      margin-right: 15px;
+      margin-bottom: 8px;
+      border: 1px solid transparent;
+      border-radius: 4px; }
+      header .navbar button:hover {
+        background-color: #333333; }
+      header .navbar button .icon-bar1 {
+        margin-top: 4px;
+        width: 22px;
+        height: 2px;
+        background-color: white;
+        display: block;
+        border-radius: 1px; }
+      header .navbar button .icon-bar2 {
+        margin-top: 4px;
+        width: 22px;
+        height: 2px;
+        background-color: white;
+        display: block;
+        border-radius: 1px; }
+      header .navbar button .icon-bar3 {
+        margin-top: 4px;
+        width: 22px;
+        height: 2px;
+        background-color: white;
+        display: block;
+        border-radius: 1px; }
+    header .navbar .links {
+      height: 5.18rem;
+      display: flex;
+      align-items: center; }
+      header .navbar .links .logo {
+        flex: 1;
+        margin-left: 3.9rem; }
+        header .navbar .links .logo a {
+          text-decoration: none;
+          color: #999999;
+          transition: color 0.3s ease;
+          font-weight: 900;
+          font-size: 22px;
+          line-height: 20px; }
+          header .navbar .links .logo a:hover {
+            color: white; }
+          header .navbar .links .logo a i {
+            color: #FF7878;
+            margin: 0 -4px 0 -4px; }
+      header .navbar .links .menu {
+        display: none; }
+  header .header {
+    background: url("../img/header-bg.jpg") no-repeat center top;
+    width: 100%;
+    margin: 0;
+    margin-top: 3.75rem;
+    min-height: 500px;
+    background-position: center center;
+    background-size: cover;
+    text-align: center; }
+    header .header h1 {
+      line-height: 76px;
+      font-family: Raleway;
+      position: absolute;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
+      margin-top: 121px;
+      color: white;
+      font-size: 70px;
+      font-weight: 300;
+      letter-spacing: 3px; }
+    header .header h2 {
+      font-family: Raleway-Bold;
+      position: absolute;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
+      color: white;
+      font-size: 40px;
+      font-weight: 700;
+      letter-spacing: 2px;
+      margin-top: 293px; } }
+@media only screen and (max-width: 1185px) {
+  .phones {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: #E0E0E0;
+    padding: 10rem 0 4rem 0;
+    justify-content: center;
+    align-items: center; }
+    .phones p {
+      font-size: 18px;
+      font-family: Raleway-Bold;
+      color: #333333;
+      font-weight: bold;
+      position: absolute;
+      margin-top: -43rem; }
+    .phones .phone1 {
+      width: 300px;
+      height: 426px;
+      -webkit-transition: -webkit-transform .5s;
+      -moz-transition: -moz-transform .5s;
+      -o-transition: -o-transform .5s;
+      -ms-transition: -ms-transform .5s;
+      transition: transform .5s;
+      margin: 0;
+      background: url("../img/p01.png") no-repeat; }
+      .phones .phone1:hover {
+        -webkit-transform: rotate(-10deg);
+        -moz-transform: rotate(-10deg);
+        -o-transform: rotate(-10deg);
+        -ms-transform: rotate(-10deg);
+        transform: rotate(-10deg); }
+    .phones .phone2 {
+      width: 300px;
+      height: 426px;
+      -webkit-transition: -webkit-transform .5s;
+      -moz-transition: -moz-transform .5s;
+      -o-transition: -o-transform .5s;
+      -ms-transition: -ms-transform .5s;
+      transition: transform .5s;
+      margin: 0;
+      background: url("../img/p02.png") no-repeat; }
+      .phones .phone2:hover {
+        -webkit-transform: rotate(-10deg);
+        -moz-transform: rotate(-10deg);
+        -o-transform: rotate(-10deg);
+        -ms-transform: rotate(-10deg);
+        transform: rotate(-10deg); }
+    .phones .phone3 {
+      width: 300px;
+      height: 426px;
+      -webkit-transition: -webkit-transform .5s;
+      -moz-transition: -moz-transform .5s;
+      -o-transition: -o-transform .5s;
+      -ms-transition: -ms-transform .5s;
+      transition: transform .5s;
+      margin: 0;
+      background: url("../img/p03.png") no-repeat; }
+      .phones .phone3:hover {
+        -webkit-transform: rotate(-10deg);
+        -moz-transform: rotate(-10deg);
+        -o-transform: rotate(-10deg);
+        -ms-transform: rotate(-10deg);
+        transform: rotate(-10deg); } }
 
 /*# sourceMappingURL=style.css.map */
