--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*----------------Font Face------------------------------*/
 @font-face {
   font-family: 'Lato';
   src: url("../fonts/lato/Lato-Regular.ttf") format("truetype"); }
@@ -5,11 +6,16 @@
   font-family: 'Lato-Light';
   src: url("../fonts/lato/Lato-Light.ttf") format("truetype"); }
 @font-face {
+  font-family: 'Lato-Bold',serif;
+  src: url("../fonts/Lato/Lato-Bold.ttf") format("truetype"); }
+@font-face {
   font-family: 'Raleway',serif;
   src: url("../fonts/raleway/Raleway-Regular.ttf") format("truetype"); }
 @font-face {
   font-family: 'Raleway-Bold',serif;
   src: url("../fonts/raleway/Raleway-Bold.ttf") format("truetype"); }
+/*----------------Mixins------------------------------*/
+/*----------------Variables------------------------------*/
 * {
   margin: 0;
   padding: 0;
@@ -23,94 +29,100 @@ body, html {
   width: 100%;
   margin: 0; }
 
-header .navbar {
-  z-index: 2;
-  position: relative;
-  overflow: hidden;
-  background-color: #2D2D2D;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 5.18rem;
-  white-space: nowrap; }
-  header .navbar button {
-    display: none; }
-  header .navbar .links {
+/*----------------Navbar------------------------------*/
+header {
+  /*----------------Header------------------------------*/ }
+  header .navbar {
+    z-index: 2;
+    position: relative;
+    overflow: hidden;
+    background-color: #2D2D2D;
+    position: fixed;
+    top: 0;
+    width: 100%;
     height: 5.18rem;
-    display: flex;
-    align-items: center; }
-    header .navbar .links .logo {
-      flex: 1;
-      margin-left: 3.9rem; }
-      header .navbar .links .logo a {
-        text-decoration: none;
-        color: #999999;
-        transition: color 0.3s ease;
-        font-weight: 900;
-        font-size: 22px;
-        line-height: 20px; }
-        header .navbar .links .logo a:hover {
-          color: white; }
-        header .navbar .links .logo a i {
-          color: #FF7878;
-          margin: 0 -4px 0 -4px; }
-    header .navbar .links .menu {
-      display: block;
-      width: 400px;
+    white-space: nowrap; }
+    header .navbar button {
+      display: none; }
+    header .navbar .links {
+      height: 5.18rem;
+      display: flex;
+      align-items: center; }
+      header .navbar .links .logo {
+        flex: 1;
+        margin-left: 3.9rem; }
+        header .navbar .links .logo a {
+          text-decoration: none;
+          color: #999999;
+          transition: color 0.3s ease;
+          font-weight: 900;
+          font-size: 22px;
+          line-height: 20px; }
+          header .navbar .links .logo a:hover {
+            color: white; }
+          header .navbar .links .logo a i {
+            color: #FF7878;
+            margin: 0 -4px 0 -4px; }
+      header .navbar .links .menu {
+        display: block;
+        width: 400px;
+        right: 0;
+        margin-right: 2rem; }
+        header .navbar .links .menu .home {
+          color: white;
+          background-color: #FF7878;
+          transition: background-color 0.3s ease; }
+          header .navbar .links .menu .home:hover {
+            background-color: black; }
+        header .navbar .links .menu a {
+          transition: color 0.3s ease;
+          padding: 5px 15px;
+          padding-top: 14px;
+          padding-bottom: 15px;
+          text-decoration: none;
+          color: #999999;
+          font-size: 14.4px;
+          font-weight: 800; }
+          header .navbar .links .menu a:hover {
+            color: white; }
+  header .header {
+    background: url("../img/header-bg.jpg") no-repeat center top;
+    width: 100%;
+    margin: 0;
+    margin-top: 3.75rem;
+    min-height: 500px;
+    background-position: center center;
+    background-size: cover;
+    text-align: center; }
+    header .header h1 {
+      line-height: 76px;
+      font-family: Lato-Light;
+      position: absolute;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
       right: 0;
-      margin-right: 2rem; }
-      header .navbar .links .menu .home {
-        color: white;
-        background-color: #FF7878;
-        transition: background-color 0.3s ease; }
-        header .navbar .links .menu .home:hover {
-          background-color: black; }
-      header .navbar .links .menu a {
-        transition: color 0.3s ease;
-        padding: 5px 15px;
-        padding-top: 14px;
-        padding-bottom: 15px;
-        text-decoration: none;
-        color: #999999;
-        font-size: 14.4px;
-        font-weight: 800; }
-        header .navbar .links .menu a:hover {
-          color: white; }
-header .header {
-  background: url("../img/header-bg.jpg") no-repeat center top;
-  width: 100%;
-  margin: 0;
-  margin-top: 3.75rem;
-  min-height: 500px;
-  background-position: center center;
-  background-size: cover;
-  text-align: center; }
-  header .header h1 {
-    line-height: 76px;
-    font-family: Raleway;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    margin-top: 121px;
-    color: white;
-    font-size: 70px;
-    font-weight: 300;
-    letter-spacing: 3px; }
-  header .header h2 {
-    font-family: Raleway-Bold;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    color: white;
-    font-size: 40px;
-    font-weight: 700;
-    letter-spacing: 2px;
-    margin-top: 293px; }
+      margin-top: 121px;
+      color: white;
+      font-size: 70px;
+      font-weight: 300;
+      letter-spacing: 3px; }
+      header .header h1 .bold {
+        font-family: Lato; }
+    header .header h2 {
+      font-family: Lato;
+      position: absolute;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
+      color: white;
+      font-size: 40px;
+      font-weight: 700;
+      letter-spacing: 2px;
+      margin-top: 293px; }
 
+/*----------------section 1------------------------------*/
 .presentation {
   margin: 0 6rem 2rem 6rem;
   display: flex;
@@ -138,12 +150,14 @@ header .header {
     width: 60rem;
     padding-left: 2rem; }
 
+/*----------------section 2------------------------------*/
 .phones {
   width: 100%;
   display: flex;
   background-color: #E0E0E0;
   padding: 6rem 0 4rem 0;
-  justify-content: center; }
+  justify-content: center;
+  margin-bottom: 4rem; }
   .phones p {
     font-size: 18px;
     font-family: Raleway-Bold;
@@ -199,11 +213,13 @@ header .header {
       -ms-transform: rotate(-10deg);
       transform: rotate(-10deg); }
 
+/*----------------section 3------------------------------*/
 .creation {
   text-align: center;
   width: 100%;
   height: 500px;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
   .creation h4 {
     padding-top: 3rem;
     font-size: 18px;
@@ -211,11 +227,14 @@ header .header {
     color: #333333;
     font-weight: bold; }
   .creation p {
+    display: block;
+    max-height: 200px;
     line-height: 28px;
     font-family: Lato-Light;
     font-size: 16px;
     color: #555555;
-    margin: 0 15rem 0 15rem; }
+    margin: 0 15rem 0 15rem;
+    padding-bottom: 4rem; }
   .creation .screen {
     width: 1600px;
     height: 333.11px;
@@ -231,6 +250,7 @@ header .header {
     transform: translateX(-50%);
     margin-top: 3rem; }
 
+/*----------------section 4------------------------------*/
 .clients {
   display: flex;
   justify-content: center;
@@ -309,7 +329,7 @@ footer {
       color: #FF7878;
       cursor: pointer; }
 
-/*----------------media screen---------------*/
+/*----------------media screen--------------------------------------------------------------------------*/
 @media only screen and (max-width: 1150px) {
   .presentation {
     overflow: auto;
@@ -517,7 +537,107 @@ footer {
       font-size: 40px;
       font-weight: 700;
       letter-spacing: 2px;
-      margin-top: 293px; } }
+      margin-top: 293px; }
+
+  .creation {
+    text-align: center;
+    width: 100%;
+    height: 500px;
+    position: relative;
+    overflow: hidden; }
+    .creation h4 {
+      padding-top: 3rem;
+      font-size: 18px;
+      font-family: Raleway-Bold;
+      color: #333333;
+      font-weight: bold; }
+    .creation p {
+      display: block;
+      line-height: 28px;
+      font-family: Lato-Light;
+      font-size: 16px;
+      color: #555555;
+      margin: 0 auto;
+      margin: 0 3rem 0 3rem;
+      padding-bottom: 4rem; }
+    .creation .screen {
+      width: 1600px;
+      height: 333.11px;
+      max-width: 80%;
+      max-height: 70%;
+      bottom: 0;
+      background-image: url("../img/munter.png");
+      background-repeat: no-repeat;
+      background-position: center bottom;
+      background-size: contain;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      margin-top: 3rem; }
+
+  .storytellers {
+    line-height: 1.7rem;
+    color: white;
+    background-color: #FF7878;
+    display: flex;
+    flex-direction: column;
+    text-align: center; }
+    .storytellers h3 {
+      font-size: 18px;
+      font-family: Raleway-Bold;
+      color: #333333;
+      font-weight: bold;
+      color: white;
+      margin: 0;
+      margin-top: 2.6rem;
+      font-size: 18px; }
+    .storytellers .wrapper {
+      margin: 0 auto;
+      margin: 0 3.3rem 0 3.3rem; }
+      .storytellers .wrapper p {
+        font-family: Lato-Light;
+        font-weight: 300;
+        margin-top: 0.5rem;
+        margin-bottom: 3.8rem; }
+
+  .clients {
+    display: flex;
+    justify-content: center;
+    background-color: #EBEBEB; }
+    .clients p {
+      font-size: 18px;
+      font-family: Raleway-Bold;
+      color: #333333;
+      font-weight: bold;
+      position: absolute;
+      margin-top: 3rem; }
+    .clients .wrap {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      margin-top: 3rem;
+      margin-bottom: 6rem; }
+      .clients .wrap .lowe {
+        width: 170px;
+        height: 200px;
+        background: url("../img/c01.gif") no-repeat; }
+      .clients .wrap .ms {
+        width: 170px;
+        height: 200px;
+        background: url("../img/c02.gif") no-repeat; }
+      .clients .wrap .sealy {
+        width: 170px;
+        height: 200px;
+        background: url("../img/c03.gif") no-repeat; }
+      .clients .wrap .circle {
+        width: 170px;
+        height: 200px;
+        background: url("../img/c04.gif") no-repeat; }
+      .clients .wrap .wells {
+        width: 170px;
+        height: 200px;
+        background: url("../img/c05.gif") no-repeat; } }
 @media only screen and (max-width: 1185px) {
   .phones {
     width: 100%;
